--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Wakepoint</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
